@@ -3,33 +3,34 @@ package ti4.helpers;
 import java.util.ArrayList;
 import java.util.HashMap;
 import java.util.List;
+import java.util.Map;
 import java.util.Optional;
 import java.util.Map.Entry;
-import java.util.stream.Collectors;
 
 import org.apache.commons.lang3.StringUtils;
 
 import ti4.commands.player.AbilityInfo;
 import ti4.generator.Mapper;
+import ti4.map.Game;
 import ti4.map.Leader;
-import ti4.map.Map;
 import ti4.map.Player;
 import ti4.map.Tile;
 import ti4.map.UnitHolder;
 import ti4.model.AgendaModel;
 import ti4.model.CombatModifierModel;
 import ti4.model.NamedCombatModifierModel;
+import ti4.model.TechnologyModel;
 import ti4.model.TileModel;
 import ti4.model.UnitModel;
 
 public class CombatModHelper {
-    public static String GetModifiersText(String prefixText, java.util.Map<UnitModel, Integer> units,
+    public static String GetModifiersText(String prefixText, Map<UnitModel, Integer> units,
             List<NamedCombatModifierModel> modifiers) {
         String result = "";
         if (!modifiers.isEmpty()) {
 
             result += prefixText;
-            ArrayList<String> modifierMessages = new ArrayList<String>();
+            List<String> modifierMessages = new ArrayList<>();
             for (NamedCombatModifierModel namedModifier : modifiers) {
                 CombatModifierModel mod = namedModifier.getModifier();
                 String unitScope = mod.getScope(); 
@@ -72,9 +73,9 @@ public class CombatModHelper {
     /// Retrieves Always on modifiers, 
     /// based on the player's info (techs, owned relics, active leaders, units), current laws in play, units in combat, and opponent race abilities)
     public static List<NamedCombatModifierModel> CalculateAutomaticMods(Player player, Player opponent,
-            HashMap<UnitModel, Integer> unitsByQuantity,
+            Map<UnitModel, Integer> unitsByQuantity,
             TileModel tile,
-            Map activeMap) {
+            Game activeGame) {
         List<NamedCombatModifierModel> alwaysOnMods = new ArrayList<>();
         HashMap<String, CombatModifierModel> combatModifiers = Mapper.getCombatModifiers();
 
@@ -84,7 +85,7 @@ public class CombatModHelper {
                     .findFirst();
             
             if (relevantMod.isPresent() 
-                && checkModPassesCondition(relevantMod.get(), tile, player, opponent, activeMap, unitsByQuantity)) {
+                && checkModPassesCondition(relevantMod.get(), tile, player, opponent, activeGame, unitsByQuantity)) {
                 alwaysOnMods.add(new NamedCombatModifierModel(relevantMod.get(), AbilityInfo.getAbilityRepresentation(ability)));
             }
         }
@@ -95,7 +96,7 @@ public class CombatModHelper {
                     .findFirst();
             
             if (relevantMod.isPresent() 
-                && checkModPassesCondition(relevantMod.get(), tile, player, opponent, activeMap, unitsByQuantity)) {
+                && checkModPassesCondition(relevantMod.get(), tile, player, opponent, activeGame, unitsByQuantity)) {
                 alwaysOnMods.add(new NamedCombatModifierModel(relevantMod.get(), Helper.getTechRepresentationLong(tech)));
             }
         }
@@ -106,22 +107,22 @@ public class CombatModHelper {
                     .findFirst();
             
             if (relevantMod.isPresent() 
-                && checkModPassesCondition(relevantMod.get(), tile, player, opponent, activeMap, unitsByQuantity)) {
+                && checkModPassesCondition(relevantMod.get(), tile, player, opponent, activeGame, unitsByQuantity)) {
                 alwaysOnMods.add(new NamedCombatModifierModel(relevantMod.get(), Helper.getRelicRepresentation(relic)));
             }
         }
 
-        List<AgendaModel> lawAgendasTargetingPlayer = activeMap.getLawsInfo().entrySet().stream()
+        List<AgendaModel> lawAgendasTargetingPlayer = activeGame.getLawsInfo().entrySet().stream()
                 .filter(entry -> entry.getValue().equals(player.getFaction()))
                 .map(entry -> Mapper.getAgenda(entry.getKey()))
-                .collect(Collectors.toList());
+                .toList();
         for (AgendaModel agenda : lawAgendasTargetingPlayer) {
             Optional<CombatModifierModel> relevantMod = combatModifiers.values().stream()
                     .filter(modifier -> modifier.isRelevantTo(Constants.AGENDA, agenda.getAlias()))
                     .findFirst();
             
             if (relevantMod.isPresent() 
-                && checkModPassesCondition(relevantMod.get(), tile, player, opponent, activeMap, unitsByQuantity)) {
+                && checkModPassesCondition(relevantMod.get(), tile, player, opponent, activeGame, unitsByQuantity)) {
                 alwaysOnMods.add(new NamedCombatModifierModel(relevantMod.get(), Emojis.Agenda + " " + agenda.getName()));
             }
         }
@@ -133,7 +134,7 @@ public class CombatModHelper {
                     .findFirst();
             
             if (relevantMod.isPresent() 
-                && checkModPassesCondition(relevantMod.get(), tile, player, opponent, activeMap, unitsByQuantity)) {
+                && checkModPassesCondition(relevantMod.get(), tile, player, opponent, activeGame, unitsByQuantity)) {
                 alwaysOnMods.add(
                                 new NamedCombatModifierModel(relevantMod.get(),
                                         Helper.getEmojiFromDiscord(unit.getBaseType()) + " "
@@ -141,7 +142,7 @@ public class CombatModHelper {
             }
         }
             
-        for (Leader leader : activeMap.playerUnlockedLeadersOrAlliance(player)) {
+        for (Leader leader : activeGame.playerUnlockedLeadersOrAlliance(player)) {
             if (leader.isExhausted() || leader.isLocked()) {
                 continue;
             }
@@ -150,7 +151,7 @@ public class CombatModHelper {
                     .findFirst();
             
             if (relevantMod.isPresent() 
-            && checkModPassesCondition(relevantMod.get(), tile, player, opponent, activeMap, unitsByQuantity)) {
+            && checkModPassesCondition(relevantMod.get(), tile, player, opponent, activeGame, unitsByQuantity)) {
                 alwaysOnMods.add(new NamedCombatModifierModel(relevantMod.get(), Helper.getLeaderFullRepresentation(leader)));
             }
         }
@@ -159,65 +160,59 @@ public class CombatModHelper {
     }
 
     public static Integer GetCombinedModifierForUnit(UnitModel unit, List<NamedCombatModifierModel> modifiers, Player player,
-            Player opponent, Map activeMap) {
-        Integer modValue = 0;
+            Player opponent, Game activeGame) {
+        int modValue = 0;
         for (NamedCombatModifierModel namedModifier : modifiers) {
             CombatModifierModel modifier = namedModifier.getModifier();
             if (modifier.isInScopeForUnit(unit)) {
-                modValue += GetVariableModValue(modifier, player, opponent, activeMap);
+                modValue += GetVariableModValue(modifier, player, opponent, activeGame);
             }
         }
         return modValue;
     }
 
     public static Boolean checkModPassesCondition(CombatModifierModel modifier, TileModel onTile, Player player,
-            Player opponent, Map activeMap, HashMap<UnitModel, Integer> unitsByQuantity) {
-        Boolean meetsCondition = false;
+            Player opponent, Game activeGame, Map<UnitModel, Integer> unitsByQuantity) {
+        boolean meetsCondition = false;
         String condition = "";
         if(modifier != null && modifier.getCondition() != null){
             condition = modifier.getCondition();
         }
         switch (condition) {
-            case Constants.MOD_OPPONENT_FRAG: 
+            case Constants.MOD_OPPONENT_FRAG -> {
                 if (opponent != null) {
                     meetsCondition = opponent.getFragments().size() > 0;
                 }
-                break;
-            case Constants.MOD_OPPONENT_STOLEN_TECH:
+            }
+            case Constants.MOD_OPPONENT_STOLEN_TECH -> {
                 if (opponent != null) {
                     String opponentFaction = opponent.getFaction();
                     meetsCondition = player.getTechs().stream()
-                            .map(techId -> Mapper.getTech(techId))
-                            .anyMatch(tech -> tech.getFaction().equals(opponentFaction));
+                        .map(Mapper::getTech)
+                        .anyMatch(tech -> tech.getFaction().equals(opponentFaction));
                 }
-                break;
-            case Constants.MOD_PLANET_MR_LEGEND_HOME:
+            }
+            case Constants.MOD_PLANET_MR_LEGEND_HOME -> {
                 if (onTile.getId().equals(player.getFactionSetupInfo().getHomeSystem())) {
                     meetsCondition = true;
                 }
                 if (onTile.getPlanets().stream().anyMatch(
-                        planetId -> StringUtils.isNotBlank(Mapper.getPlanet(planetId).getLegendaryAbilityName()))) {
+                    planetId -> StringUtils.isNotBlank(Mapper.getPlanet(planetId).getLegendaryAbilityName()))) {
                     meetsCondition = true;
                 }
                 if (onTile.getPlanets().contains(Constants.MR)) {
                     meetsCondition = true;
                 }
-                break;
-            case Constants.MOD_HAS_FRAGILE:
-                meetsCondition = player.getAbilities().contains("fragile");
-                break;
-            case Constants.MOD_OPPONENT_NO_CC_FLEET:
-                meetsCondition = !player.getMahactCC().contains(opponent.getColor());
-                break;
-            case Constants.MOD_UNITS_TWO_MATCHING_NOT_FF:
-                if(unitsByQuantity.entrySet().size() == 1){
+            }
+            case Constants.MOD_HAS_FRAGILE -> meetsCondition = player.getAbilities().contains("fragile");
+            case Constants.MOD_OPPONENT_NO_CC_FLEET -> meetsCondition = !player.getMahactCC().contains(opponent.getColor());
+            case Constants.MOD_UNITS_TWO_MATCHING_NOT_FF -> {
+                if (unitsByQuantity.entrySet().size() == 1) {
                     Entry<UnitModel, Integer> unitByQuantity = new ArrayList<>(unitsByQuantity.entrySet()).get(0);
-                    meetsCondition = unitByQuantity.getValue() == 2 && !unitByQuantity.getKey().getAsyncId().equals("ff");
+                    meetsCondition = unitByQuantity.getValue() == 2 && !"ff".equals(unitByQuantity.getKey().getAsyncId());
                 }
-                break;
-            default:
-                meetsCondition = true;
-                break;
+            }
+            default -> meetsCondition = true;
         }
         return meetsCondition;
     }
@@ -227,92 +222,80 @@ public class CombatModHelper {
     /// But for some (mostly flagships), the value is scaled depending on game state like how many fragments you have
     /// or how many POs the opponent has scored that you havent etc.
     ///
-    public static Integer GetVariableModValue(CombatModifierModel mod, Player player, Player opponent, Map activeMap) {
-        Double value = mod.getValue().doubleValue();
-        Double multipler = 1.0;
+    public static Integer GetVariableModValue(CombatModifierModel mod, Player player, Player opponent, Game activeGame) {
+        double value = mod.getValue().doubleValue();
+        double multipler = 1.0;
         Long scalingCount = (long) 0;
         if (mod.getValueScalingMultipler() != null) {
             multipler = mod.getValueScalingMultipler();
         }
         if (StringUtils.isNotBlank(mod.getValueScalingType())) {
             switch (mod.getValueScalingType()) {
-                case Constants.FRAGMENT:
-                    scalingCount = Long.valueOf(player.getFragments().size());
-                    break;
-                case Constants.LAW:
-                    scalingCount = Long.valueOf(activeMap.getLaws().size());
-                    break;
-                case Constants.MOD_OPPONENT_PO_EXCLUSIVE_SCORED:
+                case Constants.FRAGMENT -> scalingCount = (long) player.getFragments().size();
+                case Constants.LAW -> scalingCount = (long) activeGame.getLaws().size();
+                case Constants.MOD_OPPONENT_PO_EXCLUSIVE_SCORED -> {
                     if (opponent != null) {
-                        var customPublicVPList = activeMap.getCustomPublicVP();
+                        var customPublicVPList = activeGame.getCustomPublicVP();
                         List<List<String>> scoredPOUserLists = new ArrayList<>();
-                        for (Entry<String, List<String>> entry : activeMap.getScoredPublicObjectives().entrySet()) {
+                        for (Entry<String, List<String>> entry : activeGame.getScoredPublicObjectives().entrySet()) {
                             // Ensure its actually a revealed PO not imperial or a relic
-                            if (!customPublicVPList.containsKey(entry.getKey().toString())) {
+                            if (!customPublicVPList.containsKey(entry.getKey())) {
                                 scoredPOUserLists.add(entry.getValue());
                             }
                         }
                         scalingCount = scoredPOUserLists.stream()
-                                .filter(scoredPlayerList -> scoredPlayerList.contains(opponent.getUserID())
-                                        && !scoredPlayerList.contains(player.getUserID()))
-                                .count();
-                    }
-                    break;
-                case Constants.UNIT_TECH:
-                    scalingCount = player.getTechs().stream()
-                            .map(techId -> Mapper.getTech(techId))
-                            .filter(tech -> tech.getType().equals(Constants.UNIT_UPGRADE))
+                            .filter(scoredPlayerList -> scoredPlayerList.contains(opponent.getUserID())
+                                && !scoredPlayerList.contains(player.getUserID()))
                             .count();
-                    break;
-                case Constants.MOD_DESTROYERS:
+                    }
+                }
+                case Constants.UNIT_TECH -> scalingCount = player.getTechs().stream()
+                    .map(Mapper::getTech)
+                    .filter(tech -> tech.getType() == TechnologyModel.TechnologyType.UNITUPGRADE)
+                    .count();
+                case Constants.MOD_DESTROYERS -> {
                     // TODO: Doesnt seem like an easier way to do this? Seems slow.
                     String colorID = Mapper.getColorID(player.getColor());
-                    for (Tile tile : activeMap.getTileMap().values()) {
+                    for (Tile tile : activeGame.getTileMap().values()) {
                         for (UnitHolder unitHolder : tile.getUnitHolders().values()) {
-
-                            HashMap<String, Integer> unitsOnHolder = unitHolder.getUnitAsyncIdsOnHolder(colorID);
+                            Map<String, Integer> unitsOnHolder = unitHolder.getUnitAsyncIdsOnHolder(colorID);
                             for (Entry<String, Integer> unitEntry : unitsOnHolder.entrySet()) {
-                                Integer count = unitEntry.getValue();
-                                if (count == null) {
-                                    count = 0;
-                                }
-                                if (unitEntry.getKey().equals("dd")) {
+                                if ("dd".equals(unitEntry.getKey())) {
                                     scalingCount += unitEntry.getValue();
                                 }
                             }
                         }
                     }
-                    break;
-                case Constants.MOD_OPPONENT_UNIT_TECH:
+                }
+                case Constants.MOD_OPPONENT_UNIT_TECH -> {
                     if (opponent != null) {
                         // TODO:If player.getunittech existed, you could reuse it here.
                         scalingCount = opponent.getTechs().stream()
-                                .map(techId -> Mapper.getTech(techId))
-                                .filter(tech -> tech.getType().equals(Constants.UNIT_UPGRADE))
-                                .count();
+                            .map(Mapper::getTech)
+                            .filter(tech -> tech.getType() == TechnologyModel.TechnologyType.UNITUPGRADE)
+                            .count();
                     }
-                    break;
-                case Constants.MOD_OPPONENT_FACTION_TECH:
+                }
+                case Constants.MOD_OPPONENT_FACTION_TECH -> {
                     if (opponent != null) {
                         // player.getFactionTEchs?
                         scalingCount = opponent.getTechs().stream()
-                                .map(techId -> Mapper.getTech(techId))
-                                .filter(tech -> StringUtils.isNotBlank(tech.getFaction()))
-                                .count();
+                            .map(Mapper::getTech)
+                            .filter(tech -> StringUtils.isNotBlank(tech.getFaction()))
+                            .count();
                     }
-                    break;
-                default:
-                    break;
+                }
+                default -> {
+                }
             }
             value = value * multipler * scalingCount.doubleValue();
         }
         value = Math.floor(value); // to make sure eg +1 per 2 destroyer doesnt return 2.5 etc
-        return value.intValue();
+        return (int) value;
     }
     public static List<NamedCombatModifierModel> FilterRelevantMods(List<NamedCombatModifierModel> mods, List<UnitModel> units){
-        
         return mods.stream()
-                .filter(model -> CombatModHelper.IsModInScopeForUnits(units, model.getModifier()))
+                .filter(model -> IsModInScopeForUnits(units, model.getModifier()))
                 .toList();
     }
 }
